muthu fix form alignments
muthu fix form alignments

--- a/css/addPatient.css
+++ b/css/addPatient.css
@@ -181,7 +181,6 @@ background-image: url("../assets/name.jpg");
 }
 
 #m{
-margin-left: -150px;
 margin-top: 15px;
 }
 
